force-app/main/default/objects/IntroductionSystem__c/IntroductionSystem__c.object-meta.xml
<CustomObject>
    <label>導入システム</label>
    <nameField>
        <label>認証ユーザID</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>