force-app/main/default/objects/IntroductionSystem__c/fields/AgencyCode__c.field-meta.xml
<CustomField>
    <fullName>AgencyCode__c</fullName>
    <label>営業店・代理店コード</label>
    <length>11</length>
    <type>Text</type>
</CustomField>