force-app/main/default/objects/IntroductionSystem__c/fields/ApplicationPlan__c.field-meta.xml
<CustomField>
    <fullName>ApplicationPlan__c</fullName>
    <label>申し込みプラン</label>
    <length>255</length>
    <type>Text</type>
</CustomField>