force-app/main/default/objects/IntroductionSystem__c/fields/AspStartDate__c.field-meta.xml
<CustomField>
    <fullName>AspStartDate__c</fullName>
    <label>ＡＳＰ利用開始確定日</label>
    <type>Date</type>
</CustomField>