force-app/main/default/objects/IntroductionSystem__c/fields/AuthenticationUserId__c.field-meta.xml
<CustomField>
    <fullName>AuthenticationUserId__c</fullName>
    <externalId>true</externalId>
    <label>認証ユーザＩＤ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>