force-app/main/default/objects/IntroductionSystem__c/fields/CertificateRenewalDate__c.field-meta.xml
<CustomField>
    <fullName>CertificateRenewalDate__c</fullName>
    <label>証明書更新日（kit2無効）</label>
    <type>Date</type>
</CustomField>