force-app/main/default/objects/IntroductionSystem__c/fields/CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate__c</fullName>
    <formula>CreatedDate</formula>
    <label>作成日時</label>
    <type>DateTime</type>
</CustomField>