force-app/main/default/objects/IntroductionSystem__c/fields/EJibaiEndtDate__c.field-meta.xml
<CustomField>
    <fullName>EJibaiEndtDate__c</fullName>
    <label>e-Jibai利用終了日</label>
    <type>Date</type>
</CustomField>