force-app/main/default/objects/IntroductionSystem__c/fields/EJibaiStartDate__c.field-meta.xml
<CustomField>
    <fullName>EJibaiStartDate__c</fullName>
    <label>e-Jibai利用開始日</label>
    <type>Date</type>
</CustomField>