force-app/main/default/objects/IntroductionSystem__c/fields/EJibaiType__c.field-meta.xml
<CustomField>
    <fullName>EJibaiType__c</fullName>
    <label>e-Jibai有無区分</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>