force-app/main/default/objects/IntroductionSystem__c/fields/GatewayName__c.field-meta.xml
<CustomField>
    <fullName>GatewayName__c</fullName>
    <label>ゲートウエイ名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>