force-app/main/default/objects/IntroductionSystem__c/fields/GwKeyId__c.field-meta.xml
<CustomField>
    <fullName>GwKeyId__c</fullName>
    <label>共同ＧＷキーＩＤ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>