force-app/main/default/objects/IntroductionSystem__c/fields/HostOnlineUserId__c.field-meta.xml
<CustomField>
    <fullName>HostOnlineUserId__c</fullName>
    <label>ホストオンラインユーザＩＤ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>