force-app/main/default/objects/IntroductionSystem__c/fields/LastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>LastModifiedDate__c</fullName>
    <formula>LastModifiedDate</formula>
    <label>最終更新日時</label>
    <type>DateTime</type>
</CustomField>