force-app/main/default/objects/IntroductionSystem__c/fields/LifeInsuranceType__c.field-meta.xml
<CustomField>
    <fullName>LifeInsuranceType__c</fullName>
    <label>生保</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>無し</fullName>
            </value>
            <value>
                <fullName>有</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>