force-app/main/default/objects/IntroductionSystem__c/fields/R_Account__c.field-meta.xml
<CustomField>
    <fullName>R_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先名</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>導入システム</relationshipLabel>
    <relationshipName>R_Account_IntroductionSystem</relationshipName>
    <type>Lookup</type>
</CustomField>