force-app/main/default/objects/IntroductionSystem__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>利用開始日</label>
    <type>Date</type>
</CustomField>