force-app/main/default/objects/IntroductionSystem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>GwKeyId__c</columns>
    <columns>GatewayName__c</columns>
    <columns>ApplicationPlan__c</columns>
    <columns>EJibaiType__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>LifeInsuranceType__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>